--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.0.12
 colorama==0.4.5
 Django==4.0.5
 et-xmlfile==1.1.0
+gunicorn==20.1.0
 idna==3.3
 numpy==1.22.4
 openai==0.20.0
