--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.6.15
 charset-normalizer==2.0.12
 colorama==0.4.5
 Django==4.0.5
+django-cors-headers==3.13.0
 et-xmlfile==1.1.0
 gunicorn==20.1.0
 idna==3.3
